[project]
name = "urlnk"
version = "0.1.0"
description = "A simple URL shortener API."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.38",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coverage>=7.6.12",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
]
